--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "yodl-pay",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,9 +10,20 @@
   },
   "dependencies": {
     "expo": "~54.0.27",
+    "expo-font": "~14.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-router": "~6.0.17",
     "expo-status-bar": "~3.0.9",
+    "lucide-react-native": "^0.559.0",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-reanimated": "^4.2.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.15.1",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
